--- a/aprendiendo-css/04-cajas/styles.css
+++ b/aprendiendo-css/04-cajas/styles.css
@@ -6,8 +6,11 @@
 	margin: 0px;
 	padding: 0px;
 }
-#caja1,
-#caja2{
+body{
+	padding: 40px;
+}
+.caja{
+	display: block;
 	width: 250px;
 	height: 250px;
 	background-color: var(--blue);
@@ -15,6 +18,7 @@
 	margin: 15px 15px 15px 15px;
 	padding: 15px;
 	padding-bottom: 34px;
+	float: left;
 }
 
 /*#caja2{
@@ -23,10 +27,14 @@
 	background-color: blueviolet;
 }*/
 
-p{
+.caja p{
 	font-weight: bold;
 	text-align: center;
 	font-size: 20px;
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: 230px;
+}
+.clearfix{
+	float: none;
+	clear: right;
 }
