--- a/aprendiendo-css/05-ejercicio/styles.css
+++ b/aprendiendo-css/05-ejercicio/styles.css
@@ -1,9 +1,9 @@
 /*
 Ejercicio completo con HTML y CSS
-1. Crear un documento HTML y vincularlo con un CSS
-2. Crear una estructura HTML que cuente con un CONTENEDOR GENERAL
+(Hecho) 1. Crear un documento HTML y vincularlo con un CSS
+(Hecho) 2. Crear una estructura HTML que cuente con un CONTENEDOR GENERAL
 , CABECERA, MENU, BARRA LATERAL, SECCION DE CONTENIDO PRINCIPAL, ELEMENTOS DENTRO DEL CONTENEDOR PRINCIPAL Y FOOTER.
-3. Todo el contenido debe estar dentro del contenedor general y su ancho será de 1200px
+(Hecho) 3. Todo el contenido debe estar dentro del contenedor general y su ancho será de 1200px y estar centrado
 4. Header debe ocupar el 100% del ancho y tener un texto grande centrado.
 5. Menu debe tener los elementos uno al lado del otro
 6. El contenido principal debe tener un ancho del 70%
@@ -16,4 +16,21 @@ Ejercicio completo con HTML y CSS
     margin: 0px;
     padding: 0px;
     text-decoration: none;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#general{
+    width: 1200px;
+    margin: 0px auto;
+    margin-top: 20px;
+    border: 1px solid #ccc;
+}
+
+#header{
+    width: 100%;
+    height: 100px;
+    background: blue;
+    color: white;
+    text-align: center;
+    line-height: 90px;
 }
