--- a/aprendiendo-css/05-ejercicio/styles.css
+++ b/aprendiendo-css/05-ejercicio/styles.css
@@ -4,13 +4,16 @@ Ejercicio completo con HTML y CSS
 (Hecho) 2. Crear una estructura HTML que cuente con un CONTENEDOR GENERAL
 , CABECERA, MENU, BARRA LATERAL, SECCION DE CONTENIDO PRINCIPAL, ELEMENTOS DENTRO DEL CONTENEDOR PRINCIPAL Y FOOTER.
 (Hecho) 3. Todo el contenido debe estar dentro del contenedor general y su ancho será de 1200px y estar centrado
-4. Header debe ocupar el 100% del ancho y tener un texto grande centrado.
-5. Menu debe tener los elementos uno al lado del otro
-6. El contenido principal debe tener un ancho del 70%
-7. El contenido dentro del contenedor principal debe ser una cuadrícula con 4 líneas de 2 cajas.
-8. La barra lateral debe tener un ancho del 30%
+(Hecho) 4. Header debe ocupar el 100% del ancho y tener un texto grande centrado.
+(Hecho) 5. Menu debe tener los elementos uno al lado del otro
+(Hecho) 6. El contenido principal debe tener un ancho del 70%
+(Hecho) 7. El contenido dentro del contenedor principal debe ser una cuadrícula con 4 líneas de 2 cajas.
+(Hecho) 8. La barra lateral debe tener un ancho del 30%
 9. El footer debe tener un ancho del 100% del div que lo contiene y estar abajo del todo
 */
+:root{
+    --azul: rgb(15, 118, 235);
+}
 
 *{
     margin: 0px;
@@ -29,8 +32,77 @@ Ejercicio completo con HTML y CSS
 #header{
     width: 100%;
     height: 100px;
-    background: blue;
+    background: var(--azul);
     color: white;
     text-align: center;
     line-height: 90px;
+}
+
+#menu{
+    background-color: #eeeeee;
+}
+#menu ul li{
+    /*display: inline-block;*/
+    display: block;
+    float: left;
+    border-right: 1px solid #ccc;
+}
+
+#menu ul li a{
+    display: block;
+    padding: 10px;
+    color: #444;
+}
+
+#menu ul li:hover{
+    background: var(--azul);
+}
+#menu ul li:hover a{
+    color: white;
+    cursor: pointer;
+}
+
+.clearfix{
+    float: none;
+    clear: both;
+}
+
+#contenido{
+    float: left;
+    width: 69%;
+}
+
+#lateral{
+    float: left;
+    width: 30%;
+    border: 1px solid red;
+    min-height: 500px;
+    text-align: center;
+}
+
+#contenido > h1{
+    text-align: center;
+    border-bottom: 1px solid #ccc;
+    padding: 10px;
+    color: #444;
+}
+#contenido .caja{
+    width: 40%;
+    height: 250px;
+    background-color: red;
+    border: 5px solid blue;
+    color: white;
+    float: left;
+    margin: 20px;
+    margin-left: 40px;
+}
+
+#footer{
+    width: 100%;
+    height: 55px;
+    line-height: 55px;
+    background: #eee;
+    text-align: center;
+    color: #444;
+    border-top: 1px solid #ccc;
 }
