--- a/aprendiendo-css/05-ejercicio/styles.css
+++ b/aprendiendo-css/05-ejercicio/styles.css
@@ -77,7 +77,9 @@ Ejercicio completo con HTML y CSS
     width: 30%;
     border: 1px solid red;
     min-height: 500px;
+    max-height: 600px;
     text-align: center;
+    overflow: scroll;
 }
 
 #contenido > h1{
@@ -85,17 +87,24 @@ Ejercicio completo con HTML y CSS
     border-bottom: 1px solid #ccc;
     padding: 10px;
     color: #444;
-    text-shadow: -10px 10px 5px black;
+    text-shadow: 1px 1px 2px gray;
 }
+
 #contenido .caja{
+    position: relative;
     width: 40%;
     height: 250px;
-    background-color: red;
-    border: 5px solid blue;
-    color: white;
+    background-color: #ccc;
+    border: 1px solid gray;
+    color: #444;
     float: left;
     margin: 20px;
     margin-left: 40px;
+    text-align: center;
+    line-height: 200px;
+    text-transform: uppercase;
+    box-shadow: 5px 5px 15px gray;
+    border-radius: 50px 10px 4px 61px;
 }
 
 #footer{
@@ -106,4 +115,43 @@ Ejercicio completo con HTML y CSS
     text-align: center;
     color: #444;
     border-top: 1px solid #ccc;
+}
+
+.sombra-interior{
+    box-shadow: 5px 5px 15px gray inset !important;
+}
+
+.libre{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    border: 1px solid black;
+    background-color: red;
+    color: white;
+    width: 50px;
+    height: 50px;
+    font-size: 13px;
+}
+
+.libre1{
+    z-index: 2;
+}
+
+.libre2{
+    z-index: 1;
+    background-color: green;
+    top: 48%;
+}
+
+.fija{
+    top: 45%;
+    position: fixed;
+    top: 50%;
+    left: 0px;
+    border: 1px solid black;
+    background-color: blue;
+    color: white;
+    width: 50px;
+    height: 50px;
+    font-size: 13px;
 }
