Comienzo proyecto HTML5 y CSS. Maquetación del header

--- a/aprendiendo-css/07-animaciones-transiciones/styles.css
+++ b/aprendiendo-css/07-animaciones-transiciones/styles.css
@@ -41,6 +41,9 @@
     }50%{
         margin-left: 1000px;
         transform: rotate(360deg);
+        border-radius: 990px;
+    }75%{
+        background: red;
     }100%{
         margin-left: 0px;
         transform: rotate(0deg);
