--- a/maquetacion-1/css/styles.css
+++ b/maquetacion-1/css/styles.css
@@ -1,5 +1,15 @@
 /* FUENTES */
-
+@font-face{
+    font-family: "nevis";
+    src: url("fonts/nevis.eot");
+    /* iefix arregla la visualización de las fuentes en Internet Explorer */
+    src: url("fonts/nevis.eot?#iefix") format("embedded-opentype"),
+        url("fonts/nevis.woff") format("woff"),
+        url("fonts/nevis.ttf") format("truetype"),
+        url("fonts/nevis.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
 /* ESTILOS GENERALES */
 *{
     padding: 0px;
@@ -30,7 +40,7 @@ body{
 
 #header #logotipo img{
     display: block;
-    text-align: center;
+    /*text-align: center;*/
     margin: 0px auto;
     width: 140px;
 }
@@ -38,6 +48,7 @@ body{
 #header h1{
     text-align: center;
     font-size: 40px;
+    color: #70b231;
 }
 
 #header h1 a{
