--- a/maquetacion-1/css/styles.css
+++ b/maquetacion-1/css/styles.css
@@ -49,8 +49,18 @@ body{
     text-align: center;
     font-size: 40px;
     color: #70b231;
+    font-family: "nevis";
+    letter-spacing: 4px;
+    margin-top: 10px;
+    text-shadow: 0px 2px 1px #333333;
+    
 }
-
 #header h1 a{
     color: #70b231;
+    transition: text-shadow 300ms;
 }
+
+#header h1 a:hover{
+    text-shadow: 0px 2px 1px #333333, 0px 0px 40px #70b231;
+}
+
