--- a/maquetacion-1/css/styles.css
+++ b/maquetacion-1/css/styles.css
@@ -20,6 +20,69 @@ body{
     background-image: url("../img/paven.png");
 }
 
+a{
+    color: #529125;
+    text-decoration: none;
+}
+
+a:visited{
+    color: #529125;
+}
+
+a:hover{
+    color: #285616;
+}
+
+/* FORMULARIOS */
+input[type="text"],
+input[type="email"],
+input[type="password"],
+select{
+    border: 1px solid #c9c9c9;
+    box-shadow: 0px 0px 2px #ccc inset;
+    background: white;
+    padding: 2px 1px;
+    color: gray;
+    transition: all 300ms;
+}
+
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus,
+select:focus{
+    border: 1px solid #70b231;
+    color: black;
+}
+
+input[type="button"],
+input[type="submit"],
+input[type="reset"],
+button{
+    display: block;
+    border-radius: 2px;
+    border: 1px solid green;
+    width: 60px;
+    padding: 3px;
+    color: white;
+    background-color: #70b231;
+    cursor: pointer;
+}
+
+input[type="button"]:hover,
+input[type="submit"]:hover,
+input[type="reset"]:hover,
+button:hover{
+    box-shadow: 0px 0px 5px gray;
+}
+
+input[type="button"]:active,
+input[type="submit"]:active,
+input[type="reset"]:active,
+button:active{
+    box-shadow: 0px 0px 5px gray inset;
+    text-shadow: 0px 0px 1px #ccc;
+}
+
 /* CABECERA */
 #header{
     min-width: 1024px;
@@ -145,7 +208,8 @@ body{
 }
 
 /* BARRA LATERAL */
-#aside{
+#aside, #frase{
+    clear: both;
     width: 200px;
     float: left;
     margin: 30px;
@@ -153,6 +217,12 @@ body{
     border: 1px solid #ccc;
     box-shadow: 0px 2px 2px #ccc;
     font-family: sans-serif, Arial, Helvetica;
+}
+
+#frase{
+    width: 180px;
+    padding: 10px;
+    font-size: 14px;
 }
 
 #aside .widget{
@@ -166,4 +236,50 @@ body{
 
 #aside .widget:last-child{
     margin-bottom: 20px;
+}
+
+#aside h3{
+    display: block;
+    width: 100%;
+    color: #333333;
+    text-align: center;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-bottom: 15px;
+    background: #f2f3f2;
+    border: 1px solid #ccc;
+    border-left: none;
+    border-right: none;
+}
+
+#aside li{
+    margin-top: 8px;
+    margin-bottom: 5px;
+    margin-left: 20px;
+    list-style: square;
+}
+
+/* FORMULARIOS BARRA LATERAL */
+#aside div label,
+#aside div input[type="text"],
+#aside div input[type="email"],
+#aside div input[type="password"],
+#aside div a{
+    display: block;
+    width: 95%;
+    margin-top: 2px;
+    margin-bottom: 2px;
+}
+
+#aside div input[type="button"],
+#aside div input[type="submit"],
+#aside div button{
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+
+#aside input,
+#aside label{
+    margin: 0px auto;
+    text-align: center;
 }
