--- a/maquetacion-1/css/styles.css
+++ b/maquetacion-1/css/styles.css
@@ -33,6 +33,14 @@ a:hover{
     color: #285616;
 }
 
+.red{
+    color: #9b2422 !important;
+}
+
+.blue{
+    color: #0c73f2 !important;
+}
+
 /* FORMULARIOS */
 input[type="text"],
 input[type="email"],
