Comienzo de las secciones centrales

--- a/maquetacion-1/css/styles.css
+++ b/maquetacion-1/css/styles.css
@@ -217,7 +217,7 @@ button:active{
 
 /* BARRA LATERAL */
 #aside, #frase{
-    clear: both;
+    
     width: 200px;
     float: left;
     margin: 30px;
@@ -228,6 +228,7 @@ button:active{
 }
 
 #frase{
+    clear: both;
     width: 180px;
     padding: 10px;
     font-size: 14px;
@@ -290,4 +291,12 @@ button:active{
 #aside label{
     margin: 0px auto;
     text-align: center;
+}
+
+/* SECCIONES */
+#sections{
+    float: right;
+    width: 75%;
+    font-family: sans-serif, Arial, Helvetica;
+    margin-right: 20px;
 }
