Maquetación de las secciones centrales. Comienzo

--- a/maquetacion-1/css/styles.css
+++ b/maquetacion-1/css/styles.css
@@ -10,6 +10,14 @@
     font-weight: normal;
     font-style: normal;
 }
+
+@font-face{
+    font-family: "fajala";
+    src: url("fonts/FjallaOne-Regular.ttf") format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* ESTILOS GENERALES */
 *{
     padding: 0px;
@@ -301,4 +309,37 @@ aside{
     width: 75%;
     font-family: sans-serif, Arial, Helvetica;
     margin-right: 20px;
+}
+
+#sections .titulo{
+    font-family: 'fajala';
+    font-size: 24px;
+    font-weight: normal;
+    letter-spacing: 1px;
+    text-align: center;
+    padding-top: 20px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #ccc;
+}
+
+#sections section{
+    margin-top: 40px;
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 0px 4px #c9c9c9;
+    color: #333333;
+    font-size: 16px;
+    overflow: hidden;
+}
+
+#sections .article{
+    margin: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+#sections .date{
+    color: gray;
+    font-size: 14px;
 }
