Retoques finales al diseño

--- a/maquetacion-1/css/styles.css
+++ b/maquetacion-1/css/styles.css
@@ -18,6 +18,18 @@
     font-style: normal;
 }
 
+@font-face{
+    font-family: "icons";
+    src: url("fonts/websymbols-regular-webfont.svg#WebSymbolsRegular") format('svg'),
+    url("fonts/websymbols-regular-webfont.eot") format("embedded-opentype");
+    /* iefix arregla la visualización de las fuentes en Internet Explorer */
+    src: url("fonts/websymbols-regular-webfont.eot#iefix") format("embedded-opentype"),
+        url("fonts/websymbols-regular-webfont.woff") format("woff"),
+        url("fonts/websymbols-regular-webfont.ttf") format("truetype");
+    font-weight: normal;
+    font-style: normal;
+}
+
 /* ESTILOS GENERALES */
 *{
     padding: 0px;
@@ -51,6 +63,16 @@ a:hover{
 
 .orange{
     color: #d69d2a;
+}
+
+.icon{
+    font-family: 'icons';
+    margin-right: 5px;
+}
+
+.clearfix{
+    float: none;
+    clear: both;
 }
 
 /* FORMULARIOS */
@@ -222,6 +244,7 @@ button:active{
 
 /* CONTENIDO */
 #content{
+    font-family: Arial, Helvetica, sans-serif;
     width: 1250px;
     min-height: 1100px;
     margin: 0px auto;
@@ -358,4 +381,21 @@ aside{
 
 #sections .stickerTwo{
     margin-left: 860px;
+}
+
+#history{
+    text-align: right;
+    margin-top: 10px;
+    margin-right: 20px;
+}
+
+/* PIE DE PÁGINA */
+
+#footer{
+    width: 100%;
+    background-color: #333333;
+    color: white;
+    text-align: center;
+    margin-top: 40px;
+    padding: 10px;
 }
