--- a/maquetacion-1/css/styles.css
+++ b/maquetacion-1/css/styles.css
@@ -393,9 +393,13 @@ aside{
 
 #footer{
     width: 100%;
+    min-width: 1250px;
     background-color: #333333;
     color: white;
     text-align: center;
     margin-top: 40px;
     padding: 10px;
+    font-family: sans-serif;
+    font-size: 14px;
+    box-shadow: 0px 0px 2px gray;
 }
