--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -36,7 +36,7 @@ body{
 }
 
 .wrap{
-    width: 1200px;
+    width: 1250px;
     margin: 0px auto;
 }
 
@@ -111,12 +111,12 @@ body{
 
 /* BANNER */
 #banner{
-    width: 95.6%;
+    width: 95.5%;
     height: 100px;
     border: 10px solid white;
     box-shadow: 0px 0px 2px gray;
     background: url("../img/bakbaner.png");
-    background-position: -250px -200px;
+    background-position: -200px -200px;
     margin: 20px auto;
 }
 
@@ -130,4 +130,48 @@ body{
     letter-spacing: 2px;
     text-shadow: 2px 2px 1px black;
     margin: 27px auto;
+}
+
+/* TARJETAS */
+.card{
+    float: left;
+    width: 205px;
+    height: 305px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 2px #ddd;
+    background: white;
+    overflow: hidden;
+    margin: 22px;
+    margin-top: 40px;
+    cursor: pointer;
+}
+
+.card:last-child{
+    margin-right: 0px;
+}
+
+.card .icon{
+    display: block;
+    width: 100%;
+    height: 130px;
+    font-size: 50px;
+    line-height: 110px;
+    text-align: center;
+}
+
+.card .category{
+    width: 100%;
+    height: 50px;
+    font-family: "TrebuchetMS";
+    font-size: 21px;
+    font-weight: bold;
+    text-align: center;
+    color: #005380;
+}
+
+.card .description{
+    font-family: "TrebuchetMS";
+    text-align: center;
+    color: #0370b9;
+    font-size: 15px;
 }
