--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -40,7 +40,7 @@ body{
     margin: 0px auto;
 }
 
-.gear, .icon, #user, #password, #social {
+.gear, .icon {
     font-family: "WebSymbolsRegular";
 }
 
@@ -182,6 +182,7 @@ body{
     min-height: 1200px;
     font-family: "TrebuchetMS";
     float: right;
+    margin: 20px;
 }
 
 aside h3{
@@ -198,4 +199,56 @@ aside h3{
     padding-left: 15px;
     margin-top: 30px;
     margin-bottom: 15px;
+}
+
+#lateral h3:first-child{
+    margin-top: 0px;
+}
+
+#search{
+    width: 90%;
+    height: 30px;
+    margin: 10px auto;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 1px 1px 4px #ccc inset;
+}
+
+#lateral input[type="text"]{
+    width: 85%;
+    height: 30px;
+    border: none;
+    padding-left: 5px;
+    border-radius: 5px;
+    background-color: transparent;
+    color: #ccc;
+    transition: all 300ms;
+}
+
+#lateral input[type="text"]:focus{
+    color: #555;
+}
+
+#lateral input[type="button"],
+#lateral input[type="submit"]{
+    height: 30px;
+    cursor: pointer;
+    font-size: 16px;
+    background-color: transparent;
+    border: none;
+    border-left: 1px solid #ccc;
+    color: #555;
+    padding-left: 6px;
+
+}
+
+.aside-box{
+    width: 85%;
+    height: 240px;
+    margin: 0px auto;
+    margin-top: 20px;
+    padding-top: 2px;
+    background: white;
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.3), 0px 3px 7px rgba(0, 0, 0, 0.3), 0px 1px white inset, 0px -3px 2px rgba(0, 0, 0, 0.3) inset;
 }
