--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -288,3 +288,27 @@ aside h3{
     margin-top: 25px;
     font-size: 25px;
 }
+
+#login input[type="submit"],
+#login input[type="button"],
+#login input[type="reset"],
+#login button{
+    text-align: center;
+    width: 100px;
+    height: 35px;
+    margin-top: 20px;
+    color: white;
+    background: linear-gradient(to bottom, #3eb8e5 0%, #2ca0ca 100%);
+    border: 1px solid #156785;
+    border-radius: 0px;
+    cursor: pointer;
+    font-size: 15px;
+    font-family: "TrebuchetMS";
+    font-weight: lighter;
+    margin-left: 17px;
+}
+
+#login input[type="submit"]:hover,
+#login input[type="button"],
+#login input[type="reset"],
+#login button
