--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -306,6 +306,8 @@ aside h3{
     font-family: "TrebuchetMS";
     font-weight: lighter;
     margin-left: 17px;
+    margin-bottom: 20px;
+    transition: all 300ms;
 }
 
 #login input[type="submit"]:hover,
@@ -313,4 +315,18 @@ aside h3{
 #login input[type="reset"]:hover,
 #login button:hover{
     box-shadow: 0px 0px 6px gray;
+}
+
+#login a{
+    display: block;
+    font-size: 14px;
+    text-decoration: none;
+    margin-left: 18px;
+
+    color: #555;
+}
+
+#login a:hover{
+    text-decoration: underline;
+    color: #2f78bc;
 }
