--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -44,6 +44,11 @@ body{
     font-family: "WebSymbolsRegular";
 }
 
+.clearfix{
+    float: none;
+    clear: both;
+}
+
 /* CABECERA */
 #header{
     width: 100%;
@@ -185,7 +190,7 @@ body{
     margin: 20px;
 }
 
-aside h3{
+#lateral h3{
     display: block;
     width: auto;
     height: 45px;
@@ -343,4 +348,25 @@ aside h3{
     margin-left: 20px;
     margin-top: 10px;
     margin-bottom: 20px;
+}
+
+/* ARTÍCULOS */
+
+#articles{
+    width: 860px;
+    float: left;
+}
+
+#articles h2{
+    display: block;
+    width: 100%;
+    height: 75px;
+    line-height: 75px;
+    text-align: center;
+    font-family: "Bevasneue";
+    font-size: 40px;
+    font-weight: normal;
+    letter-spacing: 2px;
+    background: url("../img/pxgray.png"), white;
+
 }
