--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -202,7 +202,7 @@ body{
     font-weight: normal;
     letter-spacing: 2px;
     padding-left: 15px;
-    margin-top: 30px;
+    margin-top: 20px;
     margin-bottom: 15px;
 }
 
@@ -368,5 +368,57 @@ body{
     font-weight: normal;
     letter-spacing: 2px;
     background: url("../img/pxgray.png"), white;
+    box-shadow: 0px 1px 0px #393d3f, 1px 2px 0px #393d3f, 2px 3px 0px #393d3f, 3px 4px 0px #393d3f;
+    margin: 0px auto;
+    margin-top: 20px;
+    margin-bottom: 15px;
+}
 
+#articles article{
+    width: 100%;
+    height: auto;
+    border: 1px solid #ccc;
+    margin: 40px auto;
+    padding: 10px;
+    font-family: "TrebuchetMS";
+    background-color: white;
+    color: black;
+    box-shadow: 1px 1px 2px #ddd;
+}
+
+#articles article h4{
+    display: block;
+    font-size: 23px;
+    margin: 3px;
+}
+
+#articles article h4 a{
+    text-decoration: none;
+    color: #00538c;
+}
+
+#articles article h4 a:hover{
+    text-decoration: underline;
+}
+
+#articles .data{
+    float: right;
+    background-color: #393d3f;
+    color: white;
+    height: 30px;
+    line-height: 30px;
+    margin: -10px;
+    padding: 4px 10px;
+    font-size: 14px;
+    border-radius: 0px 0px 0px 5px;
+}
+
+#articles .data span{
+    margin: 5px;
+}
+
+#articles article p{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 15px;
 }
