--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -167,6 +167,16 @@ body{
     background: url("../img/bakbaner.png");
     background-position: -200px -200px;
     margin: 20px auto;
+    animation: backBanner 10s linear;
+    overflow: hidden;
+}
+
+@keyframes backBanner{
+    0%{
+        background-position: 0px 0px;
+    }100%{
+        background-position: -200px -200px;
+    }
 }
 
 #banner h1{
@@ -179,6 +189,27 @@ body{
     letter-spacing: 2px;
     text-shadow: 2px 2px 1px black;
     margin: 27px auto;
+    animation: showText 10s linear;
+}
+
+@keyframes showText{
+    0%{
+        transform: translateX(-600%) scale(5, 5);
+        opacity: 1;
+    }40%{
+        transform: translateX(600%) scale(5, 5);
+        opacity: 1;
+    }75%{
+        transform: translateX(-600%) scale(5, 5);
+        text-shadow: none;
+        color: transparent;
+        opacity: 0;
+    } 100%{
+        transform: translateX(0%) scale(1, 1);
+        text-shadow: 2px 2px 1px black;
+        color: white;
+        opacity: 1;
+    }
 }
 
 /* TARJETAS */
