--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -476,6 +476,18 @@ body{
     margin-bottom: 20px;
 }
 
+#social .overlay{
+    display: block;
+    height: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-shadow: 0px 0px 1px #ccc;
+    border: 3px solid white;
+    box-shadow: 0px 0px 4px #ccc;
+    background-color: #f4f7fe;
+}
+
 /* ARTÍCULOS */
 
 #articles{
