--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -84,9 +84,9 @@ body{
     margin-top: 8px;
     margin-left: 26px;
     animation-name: rotate-gear;
-    animation-duration: 2s;
+    animation-duration: 1s;
     animation-iteration-count: initial;
-    animation-timing-function: linear;
+    animation-timing-function: initial;
 }
 
 @keyframes rotate-gear{
