Efectos iconos redes sociales

--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -286,6 +286,8 @@ body{
 }
 
 .card .description{
+    /* Se borra el texto de la descripción para que solo se vea cuando se pase el ratón por encima */
+    display: none;
     font-family: "TrebuchetMS";
     text-align: center;
     color: #0370b9;
@@ -294,6 +296,7 @@ body{
 }
 
 .card:hover .description{
+    display: block;
     color: white;
     animation: showDescription 400ms linear;
 }
@@ -486,6 +489,18 @@ body{
     border: 3px solid white;
     box-shadow: 0px 0px 4px #ccc;
     background-color: #f4f7fe;
+    position: absolute;
+    padding: 5px;
+    margin-left: 70px;
+    margin-top: -52px;
+    transform: translateX(-80%);
+    opacity: 0;
+    transition: all 400ms;
+}
+
+#social div:hover .overlay{
+    opacity: 1;
+    transform: translateX(0%);
 }
 
 /* ARTÍCULOS */
