--- a/maquetacion-2/css/styles.css
+++ b/maquetacion-2/css/styles.css
@@ -581,6 +581,7 @@ body{
     margin-top: 60px;
     line-height: 100px;
     text-align: center;
+    transition: all 1s;
 }
 
 #blog a{
@@ -590,6 +591,34 @@ body{
     letter-spacing: 3px;
     color: #00538c;
     text-decoration: none;
+    transition: all 1s;
+}
+
+#blog:hover{
+    background-color: rgb(149, 128, 128);
+    border: 10px solid #37bcf9;
+    border-radius: 240px;
+    box-shadow: 0px 0px 10px gray;
+    animation: blink 10s infinite linear;
+}
+
+#blog:hover a{
+    color: white;
+    text-shadow: 1px 1px 1px black, 1px 2px 1px black, 1px 3px 1px black, 1px 4px 1px black, 1px 5px 1px black, 1px 6px 1px black;
+}
+
+@keyframes blink{
+    0%{
+        border: 10px solid #37bcf9;
+    }25%{
+        border: 10px solid green;
+    }50%{
+        border: 10px solid yellow;
+    }75%{
+        border: 10px solid white;
+    }100%{
+        border: 10px solid #37bcf9;
+    }
 }
 
 /* FOOTER */
@@ -646,6 +675,13 @@ body{
 #footer ul li a{
     display: block;
     height: 40px;
+    transition: all 300ms;
+}
+
+#footer ul li:hover a{
+    padding-left: 40px;
+    color: white;
+    width: 100%;
 }
 
 #footer iframe{
