Responsive avanzado para tablet o pantallas medianas, primera parte

--- a/maquetacion-2-responsive/css/responsive.css
+++ b/maquetacion-2-responsive/css/responsive.css
@@ -37,3 +37,73 @@
         font-size: 30px;
     }
 }
+
+@media (max-width: 1080px){
+    .card .category{
+        font-size: 17px;
+    }
+
+    .card .description{
+        font-size: 14px;
+
+    }
+
+    #articles{
+        width: 61%;
+    }
+}
+
+@media (max-width:970px){
+    #articles{
+        width: 59%;
+    }
+
+    #footer h5{
+        font-size: 22px;
+    }
+}
+
+@media (max-width:925px){
+    #articles{
+        width: 65%;
+    }
+
+    #lateral{
+        width: 25%;
+    }
+
+    #lateral input[type="text"]{
+        width: 75%;
+    }
+    .aside-box{
+        width: 95%;
+        min-height: 240px;
+        height: auto;
+    }
+
+    .aside-box a{
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
+
+    #login input[type="email"],
+    #login input[type="password"]{
+        width: 65%;
+    }
+
+    #login #user,
+    #login #password{
+        margin-left: 24px;
+    }
+
+    #login input[type="submit"], 
+    #login input[type="button"], 
+    #login input[type="reset"], 
+    #login button {
+        margin-bottom: 0px;
+    }
+
+    #login input[type="reset"]{
+        display: none;
+    }
+}
