Responsive avanzado para smartphones o pantallas de tamaño reducido

--- a/maquetacion-2-responsive/css/styles.css
+++ b/maquetacion-2-responsive/css/styles.css
@@ -296,7 +296,7 @@ body{
 }
 
 .card:hover .description{
-    display: block;
+    /*display: block;*/
     color: white;
     animation: showDescription 400ms linear;
 }
