--- a/maquetacion-2-responsive/css/responsive.css
+++ b/maquetacion-2-responsive/css/responsive.css
@@ -143,3 +143,44 @@
         max-width: 100%;
     }
 }
+
+@media (max-width: 724px){
+    #header{
+        width: 100%;
+        height: 120px;
+        padding-top: 10px;
+    }
+
+    #logo {
+        float: none;
+        width: 200px;
+        margin: 0px auto;
+    }
+
+    #menu {
+        clear: both;
+        float: none;
+        width: 90%;
+        margin: 0px auto;
+    }
+
+    #menu ul li {
+        margin: 0px auto;
+        width: 24%;
+        text-align: center;
+    }
+
+    #lateral input[type="text"]{
+        width: 70%;
+    }
+
+    #login #user, 
+    #login #password {
+        margin-left: 11px;
+    }
+
+    #login input[type="email"], 
+    #login input[type="password"] {
+        width: 70%;
+    }
+}
