--- a/maquetacion-2-responsive/css/responsive.css
+++ b/maquetacion-2-responsive/css/responsive.css
@@ -186,8 +186,12 @@
 }
 
 @media (max-width: 660px) {
+    .card {
+        margin: 1.25%;
+    }
+
     #banner h1 {
-        font-size: 25px;
+        font-size: 20px;
     }
 
     #lateral {
@@ -199,7 +203,7 @@
     }
 
     #lateral input[type="text"] {
-        width: 93%;
+        width: 90%;
     }
 
     #login input[type="email"], 
@@ -213,4 +217,60 @@
         margin: 0px auto;
     }
 
+    #footer {
+        height: auto;
+        padding-bottom: 40px;
+    }
+
+    #footer .wrap > div {
+        width: 100%;
+        margin: 0px auto;
+        margin-top: 20px;
+    }
+
+    #footer h5{
+        font-size: 25px;
+    }
+}
+
+@media (max-width: 475px){
+    #header {
+        height: 275px;
+    }
+
+    #menu {
+        width: 100%;
+    }
+
+    #menu ul li {
+        width: 100%;
+        margin: 0px;
+        line-height: 52px;
+    }
+
+    #banner {
+        height: 85px;
+    }
+
+    #banner h1 {
+        font-size: 18px;
+    }
+
+    #lateral input[type="text"] {
+        width: 85%;
+    }
+
+    .card .icon,
+    .card:hover .icon {
+        font-size: 35px;
+    }
+
+    .card .category,
+    .card:hover .category {
+        font-size: 13px;
+    }
+
+    #articles article h4 {
+        margin-top: 32px;
+    }
 }
