--- a/aprendiendo-sass/sass/_base.scss
+++ b/aprendiendo-sass/sass/_base.scss
@@ -1,8 +1,10 @@
+// Variables
 $fuente-tipica: sans-serif, Helvetica, Arial;
 $color-fondo: #ccc;
 $color-letra: red;
 $color-secundario: rgb(122, 20, 20);
 
+// Uso de variables
 body {
     background-color: $color-fondo;
 }
@@ -16,6 +18,7 @@ p {
     color: $color-secundario;
 }
 
+// Anidación
 .caja{
     border: 1px solid black;
     width: 500px;
@@ -40,3 +43,46 @@ p {
         }
     }
 }
+
+// Mixins
+@mixin crearBordes($color, $size, $shadow){
+    border: $size solid $color;
+    border-radius: $size;
+    box-shadow: 0px 0px $size $shadow;
+}
+
+.caja {
+    @include crearBordes(red, 10px, black);
+}
+
+.listado {
+    margin-top: 10px;
+    @include crearBordes(green, 5px, yellow);
+}
+
+// Herencia
+%alert-normal {
+    border: 1px solid gray;
+    background: #eee;
+    color: gray;
+    padding: 10px;
+    width: 80%;
+    margin: 20px auto;
+}
+
+.alert {
+    @extend %alert-normal;
+}
+
+.alert-danger {
+    @extend %alert-normal;
+    color: red;
+    border-color: red
+}
+
+.alert-success {
+    @extend %alert-normal;
+    color: green;
+    border-color: green;
+}
+
