--- a/aprendiendo-flexbox/styles.css
+++ b/aprendiendo-flexbox/styles.css
@@ -8,11 +8,15 @@ body {
     /*flex-direction: row;
     flex-wrap: wrap;*/
     flex-flow: row wrap;
+    justify-content: center;
     border: 3px solid black;
     padding: 5px;
 }
 
 .caja {
+    /*
+    flex-grow: 1;
+    flex-basis: calc((100% / 3) - 48px);*/
     font-size: 20px;
     font-weight: bold;
     text-align: center;
@@ -23,22 +27,20 @@ body {
     background: gray;
 }
 
-.orange {
-    order: 4;
-    background: orange;
-}
+
+
 .red {
-    order: 3;
     background: red;
 }
 
 .green {
-    order: 1;
     background: green;
 }
 
 .blue {
-    order: 2;
     background: blue;
 }
 
+.orange {
+    background: orange;
+}
