--- a/maquetacion-3-flexbox/styles.css
+++ b/maquetacion-3-flexbox/styles.css
@@ -15,3 +15,29 @@
 	margin-bottom: 40px;
 	min-height: 600px;
 }
+
+#header {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	height: 120px;
+	border-bottom: 1px solid rgba(225, 225, 226, 0.8);
+}
+
+.logo {
+	flex-basis: 65%;
+	
+	padding: 10px;
+	margin-left: 20px;
+	color: black;
+	text-shadow: 1px 1px 0px #ccc;
+	text-transform: uppercase;
+}
+
+.logo h1 {
+	font-family: Helvetica;
+	font-style: italic;
+	font-weight: 900;
+	font-size: 35px;
+}
