--- a/maquetacion-3-flexbox/styles.css
+++ b/maquetacion-3-flexbox/styles.css
@@ -26,6 +26,7 @@
 }
 
 .logo {
+	flex-grow: 1;
 	flex-basis: 65%;
 	
 	padding: 10px;
@@ -40,4 +41,34 @@
 	font-style: italic;
 	font-weight: 900;
 	font-size: 35px;
+}
+
+#menu {
+	flex-grow: 1;
+	flex-basis: 30%;
+	height: 100%;
+	padding-right: 20px;
+}
+
+#menu > ul {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+
+	height: 100%;
+	list-style: none;
+}
+
+#menu a {
+	text-transform: uppercase;
+	color: #444;
+	padding: 15px;
+	transition: all 300ms;
+}
+
+#menu a:hover{
+	background: #ccc;
+	color: white;
 }
