--- a/maquetacion-3-flexbox/styles.css
+++ b/maquetacion-3-flexbox/styles.css
@@ -28,11 +28,14 @@
 .logo {
 	flex-grow: 1;
 	flex-basis: 65%;
-	
+	font-family: Helvetica;
+	font-style: italic;
+	font-weight: 900;
+	font-size: 35px;
 	padding: 10px;
 	margin-left: 20px;
 	color: black;
-	text-shadow: 1px 1px 0px #ccc;
+	text-shadow: 2px 2px 0px #ccc;
 	text-transform: uppercase;
 }
 
@@ -161,4 +164,29 @@
 #aside a:hover {
 	background: #444;
 	color: #eee;
+}
+
+#footer {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+	height: 120px;
+	align-items: center;
+	border-top: 1px solid rgba(225, 225, 226, 0.8);
+}
+
+#footer .logo {
+	opacity: 0.5;
+	flex-basis: auto;
+	flex-grow: 1;
+	order: 2;
+	text-align: right;
+	margin-right: 20px;
+}
+
+#footer .info {
+	flex-grow: 1;
+	order: 1;
+	margin-left: 20px;
+	color: #444;
 }
