--- a/aprendiendo-grid-css/styles.css
+++ b/aprendiendo-grid-css/styles.css
@@ -4,6 +4,15 @@ body {
 }
 
 .layout {
+	width: 1200px;
+	margin: 0px auto;
+	/* Definir el grid layout */
+	display: grid;
+	/*grid-template-columns: calc(50% - 30px/4) calc(25% - 30px/4) calc(15% - 30px/4) calc(10% - 30px/4);*/
+	grid-template-columns: repeat(4, calc(25% - 30px/4));
+	/* Espacio entre elementos grid */
+	gap: 10px;
+	padding: 10px;
 	border: 3px solid orangered;
 }
 
@@ -13,7 +22,6 @@ body {
 	color: white;
 	padding: 20px;
 	border: 4px solid #222;
-	margin: 10px;
 	background-color: gray;
 }
 
