Grid Areas, estructura principal

--- a/aprendiendo-grid-css/styles.css
+++ b/aprendiendo-grid-css/styles.css
@@ -3,6 +3,153 @@ body {
 	text-align: center;
 }
 
+/*------------------- EJERCICIO COMPLETO CON ÁREAS------------------------ */
+#website-areas * {
+	margin: 0px;
+	padding: 0px;
+}
+
+#website-areas {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-template-rows: 150px 70px 1fr 70px;
+	width: 75%;
+	height: 1000px;
+	margin: 0px auto;
+	border: 1px solid #ccc;
+}
+
+#cabecera-area {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	grid-column: 1 / 6;
+	background-color: blue;
+	color: white;
+}
+
+#menu-area {
+	grid-column: 1 / 6;
+	background-color: lightblue;
+	color: black;
+}
+
+#menu-area ul {
+	display: grid;
+	grid-template-columns: repeat(9, 1fr);
+	height: 100%;
+	list-style: none;
+}
+
+#menu-area ul li{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#contenido-area {
+	grid-column: 1 / 5;
+	grid-row: 3 / 6;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 25px;
+	padding: 20px;
+	background: #eee;
+}
+
+#contenido-area article {
+	background-color: #ccc;
+	border: 1px solid #555;
+}
+
+#lateral-area {
+	grid-column: 5 / 6;
+	grid-row: 3 / 6;
+	background-color: orange;
+	color: white;
+}
+
+#pie-pagina-area {
+	grid-column: 1 / 6;
+	background-color: rgb(150, 69, 69);
+	color: white;
+}
+
+
+
+/*------------------- EJERCICIO COMPLETO ------------------------ */
+#website * {
+	margin: 0px;
+	padding: 0px;
+}
+
+#website {
+	display: grid;
+	grid-template-columns: repeat(5, 1fr);
+	grid-template-rows: 150px 70px 1fr 70px;
+	width: 75%;
+	height: 1000px;
+	margin: 0px auto;
+	border: 1px solid #ccc;
+}
+
+#cabecera {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	grid-column: 1 / 6;
+	background-color: blue;
+	color: white;
+}
+
+#menu {
+	grid-column: 1 / 6;
+	background-color: lightblue;
+	color: black;
+}
+
+#menu ul {
+	display: grid;
+	grid-template-columns: repeat(9, 1fr);
+	height: 100%;
+	list-style: none;
+}
+
+#menu ul li{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+#contenido {
+	grid-column: 1 / 5;
+	grid-row: 3 / 6;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 25px;
+	padding: 20px;
+	background: #eee;
+}
+
+#contenido article {
+	background-color: #ccc;
+	border: 1px solid #555;
+}
+
+#lateral {
+	grid-column: 5 / 6;
+	grid-row: 3 / 6;
+	background-color: orange;
+	color: white;
+}
+
+#pie-pagina {
+	grid-column: 1 / 6;
+	background-color: black;
+	color: white;
+}
+
+/*------------------- EJEMPLOS ------------------------ */
 .layout {
 	width: 80%;
 	min-height: 70vh;
