Componentes en Bootstrap. Migas de pan (Breadcrumbs)

--- a/aprendiendo-bootstrap/styles.css
+++ b/aprendiendo-bootstrap/styles.css
@@ -62,7 +62,12 @@ footer{
     text-transform: uppercase;
 }
 
-
+.breadcrumb-item + .breadcrumb-item::before {
+	float: left;
+	padding-right: .5rem;
+	color: #6c757d;
+	content: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI4IiBoZWlnaHQ9IjgiPjxwYXRoIGQ9Ik0yLjUgMEwxIDEuNSAzLjUgNCAxIDYuNSAyLjUgOGw0LTQtNC00eiIgZmlsbD0iY3VycmVudENvbG9yIi8+PC9zdmc+);
+}
 
 @media (max-width: 768px) {
     #menu {
